--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -92,7 +92,7 @@
     "/build/layouts/hotzapp/index.min.css": "/build/layouts/hotzapp/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
     "/build/layouts/hotzapp/index.min.js": "/build/layouts/hotzapp/index.min.js?id=0e7ec0aed0cb121c91aac80b77ae2927",
     "/build/layouts/integrations/index.min.css": "/build/layouts/integrations/index.min.css?id=4958807ca1338d5006f41df90b65b0ef",
-    "/build/layouts/integrations/index.min.js": "/build/layouts/integrations/index.min.js?id=1750870d83e0462a441921f4b0bd1bcc",
+    "/build/layouts/integrations/index.min.js": "/build/layouts/integrations/index.min.js?id=97dc34f8a3f45937b16843765efdbb0d",
     "/build/layouts/invites/index.min.css": "/build/layouts/invites/index.min.css?id=fd50aef6176c46422bef02ad15a53154",
     "/build/layouts/invites/index.min.js": "/build/layouts/invites/index.min.js?id=544bd11168f223e48ba6d99a31f6cf13",
     "/build/layouts/melhorenvio/index.min.css": "/build/layouts/melhorenvio/index.min.css?id=f4c40975f385ed0e00a56441666fab9f",
@@ -131,7 +131,7 @@
     "/build/layouts/projects/raty.svg": "/build/layouts/projects/raty.svg?id=0b1a91645b8dc78dc3dc7ee4827f3c3d",
     "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=82c95cf7ddc085f28cd4edabd8917425",
     "/build/layouts/projects/ckeditor.js": "/build/layouts/projects/ckeditor.js?id=49a096ecdb09de5173a8d475ed9c7a79",
-    "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=347bca0afb06846c29bfb95c2e95e3b1",
+    "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=c30689896e4f9c8e21f8c7b3c5ef1b10",
     "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=ad4cc8c5bb35857d93c77082d1e14126",
     "/build/layouts/projects/index.min.js": "/build/layouts/projects/index.min.js?id=6b5a5f24c2b63a4b67839d3d437de374",
     "/build/layouts/projects/create-store-modal.min.css": "/build/layouts/projects/create-store-modal.min.css?id=4b0ad839205e7c3d6d9b454527d88e1c",
@@ -173,7 +173,7 @@
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=e20c5e01e67646d54202613e15ac92d3",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=c21e154f1645b382e61238fd518fefe3",
     "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=87cfa8bc19ea3b10692bd77734d63f0b",
-    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=485920d013bed01920bd4343d48a5e31",
+    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=e545e0e52af13dc52632fb3186b40ad7",
     "/build/layouts/shipping/create.min.css": "/build/layouts/shipping/create.min.css?id=2492fd60aad2dfd7e20b5e2bc5be6c38",
     "/build/layouts/shipping/edit.min.css": "/build/layouts/shipping/edit.min.css?id=0bc342237cbe80823874e186ba3061a8",
     "/build/layouts/shopify/index.min.css": "/build/layouts/shopify/index.min.css?id=09c7a5646b12f8f25800fad0304e51e7",
@@ -186,7 +186,7 @@
     "/build/layouts/unicodrop/index.min.css": "/build/layouts/unicodrop/index.min.css?id=9c243a1cc5bc48b17ed26944069de366",
     "/build/layouts/unicodrop/index.min.js": "/build/layouts/unicodrop/index.min.js?id=8f9f162809899f4db282295ac337f5d3",
     "/build/layouts/webhooks/index.min.css": "/build/layouts/webhooks/index.min.css?id=1bbcf14966677a4dcc7b803ecc263aac",
-    "/build/layouts/webhooks/index.min.js": "/build/layouts/webhooks/index.min.js?id=6f32fd8388ad66855fd3b156082f4f24",
+    "/build/layouts/webhooks/index.min.js": "/build/layouts/webhooks/index.min.js?id=9fd587ca3926b1a67437ef38f83b66c2",
     "/build/layouts/whatsapp2/index.min.css": "/build/layouts/whatsapp2/index.min.css?id=9c243a1cc5bc48b17ed26944069de366",
     "/build/layouts/whatsapp2/index.min.js": "/build/layouts/whatsapp2/index.min.js?id=f19bde968bb1599d773caf35c9b444e6",
     "/build/layouts/wooCommerce/index.min.css": "/build/layouts/wooCommerce/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
@@ -723,6 +723,7 @@
     "/build/global/img/welcome-gradient.png": "/build/global/img/welcome-gradient.png?id=0265663a72c2c4d2f529db76626e1f30",
     "/build/global/img/welcome-gradient2.png": "/build/global/img/welcome-gradient2.png?id=e3167b6c00d111c3799516348e353101",
     "/build/global/img/welcome-white.png": "/build/global/img/welcome-white.png?id=fb1146ec933f9f2b7d4e770acd99e40f",
+    "/build/global/img/whatsapp-icon-new.svg": "/build/global/img/whatsapp-icon-new.svg?id=7c76238bdad1c05c6297100c62e91b76",
     "/build/global/img/whatsapp2.png": "/build/global/img/whatsapp2.png?id=8cc7040f5d90941f1ae6e6f3eef3015d",
     "/build/global/img/whatsapplogo.png": "/build/global/img/whatsapplogo.png?id=fccae3f76212584c80ce168931baec15",
     "/build/global/img/woocom.jpg": "/build/global/img/woocom.jpg?id=9c3c98aaf60b6f44522733ef248d48f6"
