--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,7 +7,7 @@
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=144f6baeb8a3383dc61b389d458992eb",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=e411711c5cea530785b66064ab017c23",
     "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=c09e4b0cdd8a881961cb0d916ef749fd",
-    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=7143b3c5052d4b37b6c0d2650bb4056f",
+    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=ff8c1fb8907d9396670e1cdfdb5338de",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=08580a2267ba749f13e365dfb4301eaa",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
     "/build/layouts/affiliates/border-anim-v.gif": "/build/layouts/affiliates/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
@@ -173,7 +173,7 @@
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=e20c5e01e67646d54202613e15ac92d3",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=7475faa42def4fb7ac66e7df6dcb84a8",
     "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=fe9fd62d0a6a7031288635ce7694a8a0",
-    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=b986216cb3ec4ac2e86a72a44c547e43",
+    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=bea5fac9f083aa2fc5fddcbf267dc587",
     "/build/layouts/shipping/create.min.css": "/build/layouts/shipping/create.min.css?id=2492fd60aad2dfd7e20b5e2bc5be6c38",
     "/build/layouts/shipping/edit.min.css": "/build/layouts/shipping/edit.min.css?id=0bc342237cbe80823874e186ba3061a8",
     "/build/layouts/shopify/index.min.css": "/build/layouts/shopify/index.min.css?id=09c7a5646b12f8f25800fad0304e51e7",
@@ -211,9 +211,9 @@
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
     "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
-    "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=b069e7b2e57c2b86c0a9aa7c260dd7fd",
+    "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=86fb5bbc3d2619cc5a1f41e291749026",
     "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=6598defdd9afea20e522786973bbeb68",
-    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=57ee29c65b7eb71d725d67eff74018f4",
+    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=4b8e582da55ad34557c843942b152eea",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=62f20a2f7c434c8dcb4090d5da23c7b6",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=08580a2267ba749f13e365dfb4301eaa",
     "/build/layouts/master/sentry-bundle.min.js": "/build/layouts/master/sentry-bundle.min.js?id=5d4a6a8523016db604c17e8aa07e60e3",
@@ -279,11 +279,11 @@
     "/build/global/img/alert-icon-code.svg": "/build/global/img/alert-icon-code.svg?id=19a4c5b919279ce5fa21f5ac83a6cf54",
     "/build/global/img/alert-pending.png": "/build/global/img/alert-pending.png?id=ff3920cbe09ae9771db5f35a888213a2",
     "/build/global/img/amex.svg": "/build/global/img/amex.svg?id=77e086f8a3952a6f0375516536320f64",
-    "/build/global/img/android-chrome-192x192.png": "/build/global/img/android-chrome-192x192.png?id=a7f59d2bd4c0066e4b1b8f6fdde44240",
-    "/build/global/img/android-chrome-256x256.png": "/build/global/img/android-chrome-256x256.png?id=531bf3e99120cd6a9d281ad0ea661237",
-    "/build/global/img/android-chrome-512x512.png": "/build/global/img/android-chrome-512x512.png?id=5dee31691af94bd01f4154060b514439",
+    "/build/global/img/android-chrome-192x192.png": "/build/global/img/android-chrome-192x192.png?id=89f96095ed64c13d4103117ef3946360",
+    "/build/global/img/android-chrome-256x256.png": "/build/global/img/android-chrome-256x256.png?id=226d672f2d0511f7e11c495163e9eba4",
+    "/build/global/img/android-chrome-512x512.png": "/build/global/img/android-chrome-512x512.png?id=402213f8b6d756c293b81b7dbcce6022",
     "/build/global/img/aplicativos.svg": "/build/global/img/aplicativos.svg?id=aa02273c8f32ffe80a4295de52802524",
-    "/build/global/img/apple-touch-icon.png": "/build/global/img/apple-touch-icon.png?id=83c2ac74e6ff8658ab8fb135ee3b504e",
+    "/build/global/img/apple-touch-icon.png": "/build/global/img/apple-touch-icon.png?id=b770bcd71f4de33dd39834c1b6f04ae3",
     "/build/global/img/astromembers.jpeg": "/build/global/img/astromembers.jpeg?id=7d6371b91493f23a3df5136c294d2d4d",
     "/build/global/img/beta-tester.png": "/build/global/img/beta-tester.png?id=805395cdde397a3d44634507c84e3f91",
     "/build/global/img/boleto.jpeg": "/build/global/img/boleto.jpeg?id=33ebbea530737a4870ea9e3d403c80e0",
@@ -343,10 +343,10 @@
     "/build/global/img/estorno-shape.svg": "/build/global/img/estorno-shape.svg?id=4db3d65c01f4a5de48a51a5ba3b0f1f9",
     "/build/global/img/extrato.svg": "/build/global/img/extrato.svg?id=849baf26258582fae1e5d6caafef4690",
     "/build/global/img/falta-pouco.png": "/build/global/img/falta-pouco.png?id=ae347131c2956e1dd9cd1cb17f61c22c",
-    "/build/global/img/favicon-16x16.png": "/build/global/img/favicon-16x16.png?id=51154484e113f76d0953aa7a8a930681",
-    "/build/global/img/favicon-32x32.png": "/build/global/img/favicon-32x32.png?id=afef70b21fe1cf8ee2ed87aaa0ff9a25",
-    "/build/global/img/favicon.ico": "/build/global/img/favicon.ico?id=68cb06fb1e96ae979d2f7a0bd1750913",
-    "/build/global/img/favicon.png": "/build/global/img/favicon.png?id=c5abd3f81a2c6ce4b42954fadbbc61e4",
+    "/build/global/img/favicon-16x16.png": "/build/global/img/favicon-16x16.png?id=fe27e7f7e406971b1213ff75c700a4a6",
+    "/build/global/img/favicon-32x32.png": "/build/global/img/favicon-32x32.png?id=969597f1d8ab9885924a7deb1bb65e29",
+    "/build/global/img/favicon.ico": "/build/global/img/favicon.ico?id=c4e5667d950f59acabff7f6918a17a83",
+    "/build/global/img/favicon.png": "/build/global/img/favicon.png?id=1158fa316be489896e82db6de2923958",
     "/build/global/img/gateway/asaas.svg": "/build/global/img/gateway/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
     "/build/global/img/gateway/cielo.svg": "/build/global/img/gateway/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
     "/build/global/img/gateway/gerencianet.svg": "/build/global/img/gateway/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
@@ -420,15 +420,17 @@
     "/build/global/img/logo-secundary.svg": "/build/global/img/logo-secundary.svg?id=30fe8264a678ec8866257a8449a670dc",
     "/build/global/img/logo.png": "/build/global/img/logo.png?id=52363b043948343139782fa82ab106da",
     "/build/global/img/logoCloudfox.png": "/build/global/img/logoCloudfox.png?id=7fbf08a36f55fbfb2407ef9d2fa86db2",
-    "/build/global/img/logos/2021/favicon/android-chrome-192x192.png": "/build/global/img/logos/2021/favicon/android-chrome-192x192.png?id=b87db5524377902085e283fb6faab07d",
-    "/build/global/img/logos/2021/favicon/android-chrome-512x512.png": "/build/global/img/logos/2021/favicon/android-chrome-512x512.png?id=2c6e64c75ae354fdc2a8929e3adb67eb",
-    "/build/global/img/logos/2021/favicon/apple-touch-icon.png": "/build/global/img/logos/2021/favicon/apple-touch-icon.png?id=899c7f4946997a97a754d9c8d856e06b",
-    "/build/global/img/logos/2021/favicon/apple-touch-icon_sirius.png": "/build/global/img/logos/2021/favicon/apple-touch-icon_sirius.png?id=21795a97c4954029cbc7bbe727b1af9e",
-    "/build/global/img/logos/2021/favicon/favicon-16x16.png": "/build/global/img/logos/2021/favicon/favicon-16x16.png?id=a6cb4b8bf5b84e2a529f242e48426e42",
-    "/build/global/img/logos/2021/favicon/favicon-16x16_sirius.png": "/build/global/img/logos/2021/favicon/favicon-16x16_sirius.png?id=70ca430d7b235c752e7741a26f1eb25c",
-    "/build/global/img/logos/2021/favicon/favicon-32x32.png": "/build/global/img/logos/2021/favicon/favicon-32x32.png?id=a8c7f5478d06e37a95ef426b9f6db66a",
-    "/build/global/img/logos/2021/favicon/favicon-32x32_sirius.png": "/build/global/img/logos/2021/favicon/favicon-32x32_sirius.png?id=4b774c4757385b7d05b421ea09980ac1",
-    "/build/global/img/logos/2021/favicon/favicon.ico": "/build/global/img/logos/2021/favicon/favicon.ico?id=ae102f50d85335d601c3673633cffb05",
+    "/build/global/img/logos/2021/favicon/android-chrome-192x192.png": "/build/global/img/logos/2021/favicon/android-chrome-192x192.png?id=89f96095ed64c13d4103117ef3946360",
+    "/build/global/img/logos/2021/favicon/android-chrome-512x512.png": "/build/global/img/logos/2021/favicon/android-chrome-512x512.png?id=402213f8b6d756c293b81b7dbcce6022",
+    "/build/global/img/logos/2021/favicon/apple-touch-icon.png": "/build/global/img/logos/2021/favicon/apple-touch-icon.png?id=b770bcd71f4de33dd39834c1b6f04ae3",
+    "/build/global/img/logos/2021/favicon/apple-touch-icon_sirius.png": "/build/global/img/logos/2021/favicon/apple-touch-icon_sirius.png?id=0f7ccfbdb1b55dff0e719d13eb74903c",
+    "/build/global/img/logos/2021/favicon/favicon-16x16.png": "/build/global/img/logos/2021/favicon/favicon-16x16.png?id=fe27e7f7e406971b1213ff75c700a4a6",
+    "/build/global/img/logos/2021/favicon/favicon-16x16_sirius.png": "/build/global/img/logos/2021/favicon/favicon-16x16_sirius.png?id=564793d771b9ad183178c6f3f6e9d3e5",
+    "/build/global/img/logos/2021/favicon/favicon-32x32 - Copia.png": "/build/global/img/logos/2021/favicon/favicon-32x32 - Copia.png?id=969597f1d8ab9885924a7deb1bb65e29",
+    "/build/global/img/logos/2021/favicon/favicon-32x32.png": "/build/global/img/logos/2021/favicon/favicon-32x32.png?id=969597f1d8ab9885924a7deb1bb65e29",
+    "/build/global/img/logos/2021/favicon/favicon-32x32_sirius.png": "/build/global/img/logos/2021/favicon/favicon-32x32_sirius.png?id=e35ab5a50b33e01396b44acbe309e5b4",
+    "/build/global/img/logos/2021/favicon/favicon.ico": "/build/global/img/logos/2021/favicon/favicon.ico?id=c4e5667d950f59acabff7f6918a17a83",
+    "/build/global/img/logos/2021/favicon/favicon.png": "/build/global/img/logos/2021/favicon/favicon.png?id=1158fa316be489896e82db6de2923958",
     "/build/global/img/logos/2021/favicon/site.webmanifest": "/build/global/img/logos/2021/favicon/site.webmanifest?id=053100cb84a50d2ae7f5492f7dd7f25e",
     "/build/global/img/logos/2021/icon-blue.png": "/build/global/img/logos/2021/icon-blue.png?id=376f3eefc94c901041b5738201115a22",
     "/build/global/img/logos/2021/icon-primary.png": "/build/global/img/logos/2021/icon-primary.png?id=bd1d6a42625770365d14ef1b1904e029",
