fix: Thallys color changes

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,7 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=8d257ab675e23abfa1a7d62390bb347f",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=144f6baeb8a3383dc61b389d458992eb",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=e411711c5cea530785b66064ab017c23",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=3c49b37eb3036ec375dae5678ba35713",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=a43df888db6fba64d4a6c590591c60b7",
     "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=d27070bc02cbdebbd2dfd3c1f7eabfe8",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=08580a2267ba749f13e365dfb4301eaa",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
@@ -23,9 +23,9 @@
     "/build/layouts/notificacoesInteligentes/index.min.js": "/build/layouts/notificacoesInteligentes/index.min.js?id=28e1c0eb267dc6cd385972b1f68dff71",
     "/build/layouts/attendance/index.min.css": "/build/layouts/attendance/index.min.css?id=e56be5f70d98b01aa4feab3adcebfd75",
     "/build/layouts/attendance/index.min.js": "/build/layouts/attendance/index.min.js?id=94752d3a1354319e8f8473cae8e3c428",
-    "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=e09df5b53aa6bf9dbe5c1be8d05d576e",
+    "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/chargebacks/contestations-files.min.js": "/build/layouts/chargebacks/contestations-files.min.js?id=d940ef3546f2f1e993b002aa17e5fa5d",
-    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=3e3b8622d4bea084795e2f42db72199a",
+    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=7cd397805fb07cf4f2e7dd178c230b2a",
     "/build/layouts/chargebacks/contestations-index.min.js": "/build/layouts/chargebacks/contestations-index.min.js?id=1094653861cc15e05706525822e0911e",
     "/build/layouts/chargebacks/svg/info-contestation.svg": "/build/layouts/chargebacks/svg/info-contestation.svg?id=48fa024c1780becac7b52e40acdfd1d1",
     "/build/layouts/checkouteditor/dropify.eot": "/build/layouts/checkouteditor/dropify.eot?id=c8841056ec6b01fa870c1d9c84d55a36",
@@ -34,7 +34,7 @@
     "/build/layouts/checkouteditor/dropify.svg": "/build/layouts/checkouteditor/dropify.svg?id=b321d818cc153b16e739072ea8bc94b8",
     "/build/layouts/checkouteditor/dropify.ttf": "/build/layouts/checkouteditor/dropify.ttf?id=5cc14a81e1b9dbc2fea41d2c86472fe9",
     "/build/layouts/checkouteditor/dropify.woff": "/build/layouts/checkouteditor/dropify.woff?id=ba7352f65fa8bbd894670300e038e898",
-    "/build/layouts/checkouteditor/index.min.css": "/build/layouts/checkouteditor/index.min.css?id=089e69b1c05de712430c44ed7f1a22ba",
+    "/build/layouts/checkouteditor/index.min.css": "/build/layouts/checkouteditor/index.min.css?id=d2b2f2b68b6e98bee4405a63266315e5",
     "/build/layouts/checkouteditor/index.min.js": "/build/layouts/checkouteditor/index.min.js?id=7a5042db1608d4e2babd6098fb18bf2f",
     "/build/layouts/checkouteditor/img/banner/teste-banner.jpg": "/build/layouts/checkouteditor/img/banner/teste-banner.jpg?id=dbe0617d5fec70c1745b5216c61261b3",
     "/build/layouts/checkouteditor/img/svg/banner-square.svg": "/build/layouts/checkouteditor/img/svg/banner-square.svg?id=01fbb6d393e03b1cee750b253b15a85e",
@@ -82,9 +82,9 @@
     "/build/layouts/finances/withdrawal-custom.min.js": "/build/layouts/finances/withdrawal-custom.min.js?id=fa80fc72e34b95443cd4e2719cb5a511",
     "/build/layouts/finances/withdrawal-default.min.js": "/build/layouts/finances/withdrawal-default.min.js?id=fc3478605bbf467e832a691d7e70ac8e",
     "/build/layouts/finances/detail.min.js": "/build/layouts/finances/detail.min.js?id=5978095faac4f779e2904780319c1ca2",
-    "/build/layouts/finances/index.min.css": "/build/layouts/finances/index.min.css?id=0daef038a0d01bb34ed9773cfa7b7ed6",
+    "/build/layouts/finances/index.min.css": "/build/layouts/finances/index.min.css?id=fbfdd3ca4fe5544b15f3904d21ece90c",
     "/build/layouts/finances/index.min.js": "/build/layouts/finances/index.min.js?id=7909d6bfdfb4661ccba624d9687ebb22",
-    "/build/layouts/finances/multi.min.css": "/build/layouts/finances/multi.min.css?id=c9a9e192602eaa72227df0e69926f985",
+    "/build/layouts/finances/multi.min.css": "/build/layouts/finances/multi.min.css?id=6b7a1339d8440e1645633e8290c678de",
     "/build/layouts/finances/multi.min.js": "/build/layouts/finances/multi.min.js?id=0bd35f33bce27081b8b55866761c9956",
     "/build/layouts/hotbillet/index.min.css": "/build/layouts/hotbillet/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
     "/build/layouts/hotbillet/index2.min.css": "/build/layouts/hotbillet/index2.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
@@ -110,7 +110,7 @@
     "/build/layouts/notazz/include.min.css": "/build/layouts/notazz/include.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
     "/build/layouts/notazz/index.min.css": "/build/layouts/notazz/index.min.css?id=10625a3e49845596ba0b0834f9fcd21a",
     "/build/layouts/notazz/index.min.js": "/build/layouts/notazz/index.min.js?id=24793453093e69f10f6b8159ff66f48f",
-    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=b57c0cf25087d9b91e45b2b08c73b626",
+    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=9bbabcf5549b2d4fa3f232e44e6601e1",
     "/build/layouts/notazz/show.min.js": "/build/layouts/notazz/show.min.js?id=ecc5f39aa50fa7dea1c8824544e9938b",
     "/build/layouts/pixels/edit.min.css": "/build/layouts/pixels/edit.min.css?id=383c3f72abefd823d5db7af054f6989f",
     "/build/layouts/products/index.min.css": "/build/layouts/products/index.min.css?id=f39075ac10ea06ef3901e641d58694e1",
@@ -126,10 +126,10 @@
     "/build/layouts/products/create-physical.min.js": "/build/layouts/products/create-physical.min.js?id=ceb33649109977fc21361a97b651dbe5",
     "/build/layouts/products/edit.min.css": "/build/layouts/products/edit.min.css?id=6bb5a643a7ac994cd258c7b05ec95831",
     "/build/layouts/products/edit.min.js": "/build/layouts/products/edit.min.js?id=f09f938c9a35e2df2bb0b44c3b6b171e",
-    "/build/layouts/projects/projectaffiliate.min.css": "/build/layouts/projects/projectaffiliate.min.css?id=ec7a5d5ccdfe53914f78a87bdadd801a",
+    "/build/layouts/projects/projectaffiliate.min.css": "/build/layouts/projects/projectaffiliate.min.css?id=4acba5cbf7ec54a586fb2c0af3203ed2",
     "/build/layouts/projects/projectaffiliate.min.js": "/build/layouts/projects/projectaffiliate.min.js?id=4446428568f719bc2a396962c252f718",
     "/build/layouts/projects/raty.svg": "/build/layouts/projects/raty.svg?id=0b1a91645b8dc78dc3dc7ee4827f3c3d",
-    "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=82c95cf7ddc085f28cd4edabd8917425",
+    "/build/layouts/projects/project.min.css": "/build/layouts/projects/project.min.css?id=21bf5808127ceb22fa8db0c3fa2de99d",
     "/build/layouts/projects/ckeditor.js": "/build/layouts/projects/ckeditor.js?id=49a096ecdb09de5173a8d475ed9c7a79",
     "/build/layouts/projects/project.min.js": "/build/layouts/projects/project.min.js?id=2bc3341f5d44a6fe612811616ca13520",
     "/build/layouts/projects/index.min.css": "/build/layouts/projects/index.min.css?id=ad4cc8c5bb35857d93c77082d1e14126",
@@ -151,7 +151,7 @@
     "/build/layouts/projectupsellconfig/previewupsellconfig.min.css": "/build/layouts/projectupsellconfig/previewupsellconfig.min.css?id=514407017127f55da51cc455df9304c9",
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
     "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=0e10a10dfb69fc24840d1a474d27b9ef",
-    "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=e09df5b53aa6bf9dbe5c1be8d05d576e",
+    "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=725dc1869294277e9651d3ec774c384b",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=0e65f9c6eec5a03154f2d383d146cb8f",
     "/build/layouts/reports/coupons.min.css": "/build/layouts/reports/coupons.min.css?id=1d2a5bbd20372b95efdab21e0faaf9a2",
@@ -165,14 +165,14 @@
     "/build/layouts/reports/pending.min.js": "/build/layouts/reports/pending.min.js?id=9de8b5dd39e606c7ebf9454c2ec03bf2",
     "/build/layouts/reports/projections.min.css": "/build/layouts/reports/projections.min.css?id=4dc0bc7748b3383f652d27ae7c2bc81f",
     "/build/layouts/reports/projections.min.js": "/build/layouts/reports/projections.min.js?id=da58194fb13ac19bbc789670b15674fd",
-    "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=e09df5b53aa6bf9dbe5c1be8d05d576e",
+    "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/sales/details.min.js": "/build/layouts/sales/details.min.js?id=849fb084cd1d09f65fc2b03b0eb33ce4",
-    "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=b70c42db67e00a956bd8683d03c302b7",
+    "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=780aa39b33f44e7cfd5c686695d09129",
     "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=a984f965dbd4f026dc20120ca9aa2e73",
-    "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=e09df5b53aa6bf9dbe5c1be8d05d576e",
+    "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=e20c5e01e67646d54202613e15ac92d3",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=7475faa42def4fb7ac66e7df6dcb84a8",
-    "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=c1ccf2c3ce53a94f60acb0061d42826a",
+    "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=4368b127bf10814b95c323f955ec8008",
     "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=e92fe9caee7e7063b99de03bce80cacc",
     "/build/layouts/shipping/create.min.css": "/build/layouts/shipping/create.min.css?id=2492fd60aad2dfd7e20b5e2bc5be6c38",
     "/build/layouts/shipping/edit.min.css": "/build/layouts/shipping/edit.min.css?id=0bc342237cbe80823874e186ba3061a8",
@@ -210,9 +210,9 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
+    "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=81cf5aac3ef99b95061b465f431a16fb",
     "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=6215ac8290a3ccfd4fe20567d4214106",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=73530c7a62cfd671221875355fd0d256",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=136b2cad569573644f29864c4a4257f8",
     "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=98e07f9664f7a75108101b86c866a7f0",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=62f20a2f7c434c8dcb4090d5da23c7b6",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=08580a2267ba749f13e365dfb4301eaa",
@@ -456,7 +456,7 @@
     "/build/global/img/logos/2021/icon-sirius.png": "/build/global/img/logos/2021/icon-sirius.png?id=c41be2b3f594d58fe270df5782090c4e",
     "/build/global/img/logos/2021/icon-white.png": "/build/global/img/logos/2021/icon-white.png?id=6198acaa4ca883e4f7f61d06360c2f87",
     "/build/global/img/logos/2021/logo-blue.png": "/build/global/img/logos/2021/logo-blue.png?id=e5619b73f314ea4ae34b6acd71bdafe5",
-    "/build/global/img/logos/2021/logo-primary.png": "/build/global/img/logos/2021/logo-primary.png?id=07bc18e4cdc35ebbf68cba0e5e856dfe",
+    "/build/global/img/logos/2021/logo-primary.png": "/build/global/img/logos/2021/logo-primary.png?id=86b68d753666c8c2bb0f62c0ef70edd0",
     "/build/global/img/logos/2021/logo-secundary.png": "/build/global/img/logos/2021/logo-secundary.png?id=2c6c7d911ddc034bf038614cab24c762",
     "/build/global/img/logos/2021/logo-vertical-blue.png": "/build/global/img/logos/2021/logo-vertical-blue.png?id=d7fd8e9a93b271d33490f06b082f5105",
     "/build/global/img/logos/2021/logo-vertical-primary.png": "/build/global/img/logos/2021/logo-vertical-primary.png?id=d9373f1a3a7e3db0bde4496c1ec919f6",
@@ -464,6 +464,7 @@
     "/build/global/img/logos/2021/logo-vertical-white.png": "/build/global/img/logos/2021/logo-vertical-white.png?id=3146c2929dd074211d80ce3ee6f171aa",
     "/build/global/img/logos/2021/logo-white.png": "/build/global/img/logos/2021/logo-white.png?id=4bade321093882a2e70e9a255a5a534a",
     "/build/global/img/logos/2021/ps12DC.tmp": "/build/global/img/logos/2021/ps12DC.tmp?id=9afd709713ff8ab6873cab9b4f86fcd5",
+    "/build/global/img/logos/2021/ps1F01.tmp": "/build/global/img/logos/2021/ps1F01.tmp?id=86b68d753666c8c2bb0f62c0ef70edd0",
     "/build/global/img/logos/2021/ps2EBA.tmp": "/build/global/img/logos/2021/ps2EBA.tmp?id=2c6c7d911ddc034bf038614cab24c762",
     "/build/global/img/logos/2021/ps36D8.tmp": "/build/global/img/logos/2021/ps36D8.tmp?id=0674d9e608e52ef4b27ae70bfd54894c",
     "/build/global/img/logos/2021/ps80D4.tmp": "/build/global/img/logos/2021/ps80D4.tmp?id=7cd2fbd0d1aecc4ec23bdc30a1e35381",
