--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,7 +14,7 @@
     "/build/layouts/affiliates/border-h.gif": "/build/layouts/affiliates/border-h.gif?id=cf0241ad6b8781a07a8414371f1ab2d4",
     "/build/layouts/affiliates/border-v.gif": "/build/layouts/affiliates/border-v.gif?id=77d97f66e0d5748343d45e86cdc81f02",
     "/build/layouts/apps/index.min.css": "/build/layouts/apps/index.min.css?id=cf5939915a862381e33523377586d06d",
-    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=2433f802c378017c536e7c05ecdf49a4",
+    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=8648a94a2b0d423097ffd9a20a8346a9",
     "/build/layouts/apps/imgs/bt-action-hover.svg": "/build/layouts/apps/imgs/bt-action-hover.svg?id=646d87703670bb5999ed53b54492a841",
     "/build/layouts/apps/imgs/bt-action.svg": "/build/layouts/apps/imgs/bt-action.svg?id=96bec9d075f7a81e7b3c45d424a68d73",
     "/build/layouts/astronmembers/index.min.css": "/build/layouts/astronmembers/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
@@ -151,6 +151,8 @@
     "/build/layouts/projectupsellconfig/previewupsellconfig.min.css": "/build/layouts/projectupsellconfig/previewupsellconfig.min.css?id=514407017127f55da51cc455df9304c9",
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
     "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=01f0d965e24ba5f12329e51f2fee3af8",
+    "/build/layouts/geradorrastreio/index.min.css": "/build/layouts/geradorrastreio/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
+    "/build/layouts/geradorrastreio/index.min.js": "/build/layouts/geradorrastreio/index.min.js?id=2570f345be84b3b437ef3c69c464b80e",
     "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=725dc1869294277e9651d3ec774c384b",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=254af7f522a4041e6933ce5fd1d4dc09",
@@ -358,6 +360,7 @@
     "/build/global/img/gateways/getnet.svg": "/build/global/img/gateways/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
     "/build/global/img/gateways/vega-logo.svg": "/build/global/img/gateways/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/gateways/vega.svg": "/build/global/img/gateways/vega.svg?id=7974668a6a24e9d364cc2c8dbe882879",
+    "/build/global/img/geradorrastreio.png": "/build/global/img/geradorrastreio.png?id=66be28e16a9be48ffb33583e93aa1e06",
     "/build/global/img/geral-1.svg": "/build/global/img/geral-1.svg?id=ce2e82a06a29c893b9515682d25ff01e",
     "/build/global/img/geral-2.svg": "/build/global/img/geral-2.svg?id=774c00bff2a27fd0015ed4ad8969132d",
     "/build/global/img/geral-3.svg": "/build/global/img/geral-3.svg?id=88aa7ca5c82f07665eaac5cc561f750a",
