feat: Add VegaCheckout module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,7 +14,7 @@
     "/build/layouts/affiliates/border-h.gif": "/build/layouts/affiliates/border-h.gif?id=cf0241ad6b8781a07a8414371f1ab2d4",
     "/build/layouts/affiliates/border-v.gif": "/build/layouts/affiliates/border-v.gif?id=77d97f66e0d5748343d45e86cdc81f02",
     "/build/layouts/apps/index.min.css": "/build/layouts/apps/index.min.css?id=cf5939915a862381e33523377586d06d",
-    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=7520cd79ec462307ff0641a3495322e5",
+    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=30a189a277e2660aadff3a8317022648",
     "/build/layouts/apps/imgs/bt-action-hover.svg": "/build/layouts/apps/imgs/bt-action-hover.svg?id=646d87703670bb5999ed53b54492a841",
     "/build/layouts/apps/imgs/bt-action.svg": "/build/layouts/apps/imgs/bt-action.svg?id=96bec9d075f7a81e7b3c45d424a68d73",
     "/build/layouts/astronmembers/index.min.css": "/build/layouts/astronmembers/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
@@ -155,6 +155,8 @@
     "/build/layouts/geradorrastreio/index.min.js": "/build/layouts/geradorrastreio/index.min.js?id=2570f345be84b3b437ef3c69c464b80e",
     "/build/layouts/utmify/index.min.css": "/build/layouts/utmify/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
     "/build/layouts/utmify/index.min.js": "/build/layouts/utmify/index.min.js?id=d4c977b311ac6e0683a6e7cbdbdc866d",
+    "/build/layouts/vegacheckout/index.min.css": "/build/layouts/vegacheckout/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
+    "/build/layouts/vegacheckout/index.min.js": "/build/layouts/vegacheckout/index.min.js?id=06799ba2de44037ab13b8b665bae91d7",
     "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=026d6b1608eb9659ddde98dafb84c48e",
     "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=725dc1869294277e9651d3ec774c384b",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=254af7f522a4041e6933ce5fd1d4dc09",
@@ -753,6 +755,7 @@
     "/build/global/img/user.jpg": "/build/global/img/user.jpg?id=09d5cb3a07e83c444aaaff84e71de7f0",
     "/build/global/img/utmify.png": "/build/global/img/utmify.png?id=8160c09bd9e2ab4bcaf8dc9ba433c27b",
     "/build/global/img/vega-logo.svg": "/build/global/img/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
+    "/build/global/img/vega.png": "/build/global/img/vega.png?id=64590d7e67cef5b3c9112ba464c841c0",
     "/build/global/img/vendas.svg": "/build/global/img/vendas.svg?id=2e92d5396faba7be217c49fbc91d2562",
     "/build/global/img/visa.svg": "/build/global/img/visa.svg?id=0dd700399693a6d7a4a71650a0f17a2a",
     "/build/global/img/welcome-gradient.png": "/build/global/img/welcome-gradient.png?id=0265663a72c2c4d2f529db76626e1f30",
