feat: Adoorei Checkout

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -13,8 +13,10 @@
     "/build/layouts/affiliates/border-anim-v.gif": "/build/layouts/affiliates/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
     "/build/layouts/affiliates/border-h.gif": "/build/layouts/affiliates/border-h.gif?id=cf0241ad6b8781a07a8414371f1ab2d4",
     "/build/layouts/affiliates/border-v.gif": "/build/layouts/affiliates/border-v.gif?id=77d97f66e0d5748343d45e86cdc81f02",
+    "/build/layouts/adooreicheckout/index.min.css": "/build/layouts/adooreicheckout/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
+    "/build/layouts/adooreicheckout/index.min.js": "/build/layouts/adooreicheckout/index.min.js?id=2ca1ed70457b067752b7955ff14c151c",
     "/build/layouts/apps/index.min.css": "/build/layouts/apps/index.min.css?id=cf5939915a862381e33523377586d06d",
-    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=30a189a277e2660aadff3a8317022648",
+    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=a9c1f16aef561d494f85d4e9603851fb",
     "/build/layouts/apps/imgs/bt-action-hover.svg": "/build/layouts/apps/imgs/bt-action-hover.svg?id=646d87703670bb5999ed53b54492a841",
     "/build/layouts/apps/imgs/bt-action.svg": "/build/layouts/apps/imgs/bt-action.svg?id=96bec9d075f7a81e7b3c45d424a68d73",
     "/build/layouts/astronmembers/index.min.css": "/build/layouts/astronmembers/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
@@ -152,7 +154,7 @@
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
     "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=01f0d965e24ba5f12329e51f2fee3af8",
     "/build/layouts/geradorrastreio/index.min.css": "/build/layouts/geradorrastreio/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
-    "/build/layouts/geradorrastreio/index.min.js": "/build/layouts/geradorrastreio/index.min.js?id=90a296e2333e323de877eab9c6aaf1d3",
+    "/build/layouts/geradorrastreio/index.min.js": "/build/layouts/geradorrastreio/index.min.js?id=1e7b21648ef08a73daa41cd327591eec",
     "/build/layouts/utmify/index.min.css": "/build/layouts/utmify/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
     "/build/layouts/utmify/index.min.js": "/build/layouts/utmify/index.min.js?id=462fc19dfc822ad5647c405ce0f93074",
     "/build/layouts/vegacheckout/index.min.css": "/build/layouts/vegacheckout/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
@@ -274,6 +276,7 @@
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/add-hover.svg": "/build/global/img/add-hover.svg?id=9849656e8c2abaccac2f75bc7461c1f0",
     "/build/global/img/add.svg": "/build/global/img/add.svg?id=a4f25f7bc89c41253af8630198f15af6",
+    "/build/global/img/adoorei.png": "/build/global/img/adoorei.png?id=dd5004492febd02d01c81e9f21873e02",
     "/build/global/img/adquirintes/asaas.svg": "/build/global/img/adquirintes/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
     "/build/global/img/adquirintes/cielo.svg": "/build/global/img/adquirintes/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
     "/build/global/img/adquirintes/gerencianet.svg": "/build/global/img/adquirintes/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
