--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "filp/whoops": "~2.0",
         "kitloong/laravel-migrations-generator": "^6.10",
         "krlove/eloquent-model-generator": "dev-master",
+        "laravel/pint": "^1.17",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.0",
         "phpunit/phpunit": "^9.0",
