--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "ext-json": "*",
         "arcanedev/log-viewer": "9.0.0",
         "automattic/woocommerce": "^3.0",
-        "barryvdh/laravel-cors": "3.0.0",
         "barryvdh/laravel-dompdf": "^2.0.0",
         "cloudflare/sdk": "1.3.0",
         "doctrine/dbal": "3.4.2",
@@ -27,14 +26,13 @@
         "laracasts/flash": "^3.0",
         "laracasts/presenter": "^0.2.1",
         "laracasts/utilities": "3.*",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^9.2",
         "laravel/helpers": "^1.2",
         "laravel/horizon": "5.9.9",
         "laravel/legacy-factories": "^1.3",
         "laravel/passport": "10.4.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "3.4.6",
-        "laravelcollective/html": "6.*",
         "lcobucci/jwt": "4.1.5",
         "league/flysystem": "3.2.1",
         "league/flysystem-aws-s3-v3": "3.1.1",
@@ -54,6 +52,7 @@
         "vinkla/hashids": "10.0.1"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "ext-curl": "*",
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.8.2",
