--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "league/flysystem": "3.2.1",
         "league/flysystem-aws-s3-v3": "3.1.1",
         "maatwebsite/excel": "^3.1",
-        "nwidart/laravel-modules": "^8.0",
+        "nwidart/laravel-modules": "^9.0",
         "paquettg/php-html-parser": "^2.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "7.0.2",
@@ -47,7 +47,7 @@
         "spatie/laravel-activitylog": "4.5.3",
         "spatie/laravel-health": "^1.14",
         "spatie/laravel-permission": "5.5.5",
-        "spatie/laravel-schedule-monitor": "3.0.3",
+        "spatie/laravel-schedule-monitor": "^3.0",
         "torann/geoip": "^1.0",
         "vinkla/hashids": "10.0.1"
     },
