feat: add integration screen

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,7 +16,7 @@
     "/build/layouts/adooreicheckout/index.min.css": "/build/layouts/adooreicheckout/index.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
     "/build/layouts/adooreicheckout/index.min.js": "/build/layouts/adooreicheckout/index.min.js?id=7913bbd42a3bd2363e37751199cdd1db",
     "/build/layouts/apps/index.min.css": "/build/layouts/apps/index.min.css?id=cf5939915a862381e33523377586d06d",
-    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=a9c1f16aef561d494f85d4e9603851fb",
+    "/build/layouts/apps/index.min.js": "/build/layouts/apps/index.min.js?id=b5cc9f370154b40e1da2f00fa55fba79",
     "/build/layouts/apps/imgs/bt-action-hover.svg": "/build/layouts/apps/imgs/bt-action-hover.svg?id=646d87703670bb5999ed53b54492a841",
     "/build/layouts/apps/imgs/bt-action.svg": "/build/layouts/apps/imgs/bt-action.svg?id=96bec9d075f7a81e7b3c45d424a68d73",
     "/build/layouts/astronmembers/index.min.css": "/build/layouts/astronmembers/index.min.css?id=fa7210da1a8108938680ca778d11a1a2",
@@ -203,6 +203,10 @@
     "/build/layouts/woocommerce/plugins/plugin_cloudfox.zip": "/build/layouts/woocommerce/plugins/plugin_cloudfox.zip?id=b09583ecbe67bc58d07ec9f5a7c01179",
     "/build/layouts/woocommerce/plugins/plugin_cloudfox_skip_to_checkout.zip": "/build/layouts/woocommerce/plugins/plugin_cloudfox_skip_to_checkout.zip?id=0e480cf6ebd118579b8ece861771cb3f",
     "/build/layouts/finances/withdrawal-index.min.js": "/build/layouts/finances/withdrawal-index.min.js?id=96a641bbcfab7bde70921e7bba2b1264",
+    "/build/layouts/nuvemshop/index.min.css": "/build/layouts/nuvemshop/index.min.css?id=5a518b447089fff5217df0714c066385",
+    "/build/layouts/nuvemshop/index.min.js": "/build/layouts/nuvemshop/index.min.js?id=03785c07e35c6bd2f6b0b4e4a722b0a1",
+    "/build/layouts/nuvemshop/finalize-integration.min.css": "/build/layouts/nuvemshop/finalize-integration.min.css?id=6cefbfe1069488c67b9d7ac2f067968f",
+    "/build/layouts/nuvemshop/finalize-integration.min.js": "/build/layouts/nuvemshop/finalize-integration.min.js?id=57a3ac6c8dbd949fc7465d18f4c427f2",
     "/build/layouts/master/web-icons.eot": "/build/layouts/master/web-icons.eot?id=ffda7c1fc007d4f1e47e6ed0eaab0906",
     "/build/layouts/master/web-icons.svg": "/build/layouts/master/web-icons.svg?id=3bfa567f9cea7825c910c10509d1b341",
     "/build/layouts/master/web-icons.ttf": "/build/layouts/master/web-icons.ttf?id=f0e8248211ccd8d9e589413c0f1afa85",
@@ -510,6 +514,7 @@
     "/build/global/img/notazz.png": "/build/global/img/notazz.png?id=083698dede9bab5c8ad8aecc83d65c17",
     "/build/global/img/notificacoes.svg": "/build/global/img/notificacoes.svg?id=b08926837fa6c4affc39f09f59fab7e8",
     "/build/global/img/notificacoesinteligentes.png": "/build/global/img/notificacoesinteligentes.png?id=975596fd2ad434779e7f87aacfae5ca4",
+    "/build/global/img/nuvemshop.png": "/build/global/img/nuvemshop.png?id=5681769229fd9e9aabbcb26012c91791",
     "/build/global/img/onboarding/account-health.png": "/build/global/img/onboarding/account-health.png?id=9c6d88fbf0c95d41e5600e76c6c544fa",
     "/build/global/img/onboarding/account-health@2x.png": "/build/global/img/onboarding/account-health@2x.png?id=dabb5e62645e5197666ec5994dae9210",
     "/build/global/img/onboarding/arrow-right-down.svg": "/build/global/img/onboarding/arrow-right-down.svg?id=0f0cb3a03c2d11e8eb2bf6df7afc5744",
